--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,14 @@ jobs:
         run: npm ci
 
       - name: Set up environment variables
-        run: echo "REACT_APP_API_KEY=${{ secrets.REACT_APP_API_KEY }}" >> .env.local
+        run: |
+            echo "REACT_APP_API_KEY=${{ secrets.REACT_APP_API_KEY }}" >> .env.local
+            echo "REACT_APP_AUTH_DOMAIN=${{ secrets.REACT_APP_AUTH_DOMAIN }}" >> .env.local
+            echo "REACT_APP_PROJECT_ID=${{ secrets.REACT_APP_PROJECT_ID }}" >> .env.local
+            echo "REACT_APP_STORAGE_BUCKET=${{ secrets.REACT_APP_STORAGE_BUCKET }}" >> .env.local
+            echo "REACT_APP_MESSAGING_SENDER_ID=${{ secrets.REACT_APP_MESSAGING_SENDER_ID }}" >> .env.local
+            echo "REACT_APP_APP_ID=${{ secrets.REACT_APP_APP_ID }}" >> .env.local
+            echo "REACT_APP_MEASUREMENT_ID=${{ secrets.REACT_APP_MEASUREMENT_ID }}" >> .env.local
 
       - name: Build React app
         run: npm run build
