--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -54,7 +54,7 @@ jobs:
           folder: build
           clean: true
           source: build
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
       - name: Merge pull request
         if: github.event_name == 'pull_request' && success()
         uses: actions/github-script@v5
