--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "superchat",
-  "homepage": "https://abhijithhegde.github.io/SuperChat",
+  "homepage": "https://abhijithhegde.github.io/SuperChat/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
