--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           npm install --save-dev gh-pages
           npm run build
-          npx gh-pages -d build -b gh-pages -r https://github.com/abhijithhegde/SuperChat
+          npx gh-pages -d build -b gh-pages -t ${{ secrets.GH_TOKEN }}
       
 
     
