--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -46,12 +46,10 @@ jobs:
             exit 1
           fi
 
-      - name: Deploy to GitHub Pages
-        if: success()
-        run: |
-          npm install --save-dev gh-pages
-          npm run build
-          npx gh-pages -d build -b gh-pages -t ${{ secrets.GH_TOKEN }}
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: build # The folder the action should deploy.
       
 
     
