--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,69 +1,26 @@
-name: React CI/CD
+name: Deployment
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
   pull_request:
-    branches:
-      - main
+    branches: [ "main" ]
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Set up environment variables
-        run: |
-            echo "REACT_APP_API_KEY=${{ secrets.REACT_APP_API_KEY }}" >> .env.local
-            echo "REACT_APP_AUTH_DOMAIN=${{ secrets.REACT_APP_AUTH_DOMAIN }}" >> .env.local
-            echo "REACT_APP_PROJECT_ID=${{ secrets.REACT_APP_PROJECT_ID }}" >> .env.local
-            echo "REACT_APP_STORAGE_BUCKET=${{ secrets.REACT_APP_STORAGE_BUCKET }}" >> .env.local
-            echo "REACT_APP_MESSAGING_SENDER_ID=${{ secrets.REACT_APP_MESSAGING_SENDER_ID }}" >> .env.local
-            echo "REACT_APP_APP_ID=${{ secrets.REACT_APP_APP_ID }}" >> .env.local
-            echo "REACT_APP_MEASUREMENT_ID=${{ secrets.REACT_APP_MEASUREMENT_ID }}" >> .env.local
-
-      - name: Build React app
-        run: npm run build
-
-      - name: Verify build success
-        run: |
-          if [ -d "build" ]; then
-            echo "Build successful"
-          else
-            echo "Build failed"
-            exit 1
-          fi
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: build # The folder the action should deploy.
-      
-
     
-      - name: Merge pull request
-        if: github.event_name == 'pull_request' && success()
-        uses: actions/github-script@v5
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const response = await github.pulls.merge({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: context.payload.pull_request.number,
-              commit_title: 'Automated merge',
-              commit_message: `Automated merge of pull request ${context.payload.pull_request.number}`
-            });
-            console.log(response);
+    steps:
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
+    - name: Deploy 🚀
+      uses: JamesIves/github-pages-deploy-action@v4
+      with:
+        folder: build # The folder the action should deploy.
